--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MyConnectionString": "Server=(LocalDb)\\SerzDb;Database=School;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
