--- a/rep.csproj
+++ b/rep.csproj
@@ -7,8 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="css\" />
-    <Folder Include="DataContext\" />
+    <Compile Remove="css\**" />
+    <Compile Remove="DataContext\**" />
+    <Content Remove="css\**" />
+    <Content Remove="DataContext\**" />
+    <EmbeddedResource Remove="css\**" />
+    <EmbeddedResource Remove="DataContext\**" />
+    <None Remove="css\**" />
+    <None Remove="DataContext\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
